# Deep-Research-Agent

./: README.md
crew_ai/: .env.example  .gitignore  DEEP_RESEARCH_CREW_PLAN.md  KNOWLEDGE_SYSTEM.md  README.md  pyproject.toml
crew_ai/data/: user_preference.txt
crew_ai/knowledge/: README.md
crew_ai/knowledge/domain_knowledge/: research_methodology.txt
crew_ai/src/latest_ai_development/: api.py  crew.py  main.py  schemas.py  streaming_callback.py
crew_ai/src/latest_ai_development/config/: agents.yaml  tasks.yaml
crew_ai/src/latest_ai_development/models/: __init__.py  document.py
crew_ai/src/latest_ai_development/tools/: __init__.py
crew_ai/src/latest_ai_development/tools/analysis/: __init__.py  claim_extractor.py  fact_checker.py
crew_ai/src/latest_ai_development/tools/ingestion/: __init__.py  advanced_search.py  firecrawl_scraper.py  pdf_parser.py  youtube_search.py
crew_ai/src/latest_ai_development/utils/: knowledge_manager.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.tsx
latest_ai_development/: .env.example  pyproject.toml  research_report.md
latest_ai_development/src/latest_ai_development/: api.py  main.py
latest_ai_development/src/latest_ai_development/config/: tasks.yaml
latest_ai_development/src/latest_ai_development/models/: claim.py  research.py
latest_ai_development/src/latest_ai_development/tools/: __init__.py  base.py
latest_ai_development/src/latest_ai_development/tools/ingestion/: pdf_parser.py  web_scraper.py
latest_ai_development/src/latest_ai_development/tools/output/: __init__.py
(+1 files in other folders)
